# routes/v1/auth.routes.js
@@ -1,10 +1,10 @@
 const router = require("express").Router();
-const {register, login, me} = require("../../controllers/v1/authControllers");
+const {register, login, auth} = require("../../controllers/v1/authControllers");
 const restrict = require('../../middlewares/auth.middlewares')
 
 // API Auth
 router.post("/auth/register", register);
 router.post("/auth/login", login);
-router.get('/auth/authenticate', restrict, me)
+router.get('/auth/authenticate', restrict, auth)
 
 module.exports = router;
